--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Strata by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Seleckta Riddim</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -20,7 +15,7 @@
 				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
                 <h1><strong>SELECKTA RIDDIM</strong></h1>
 				<h3><br />
-				Dancehall Astist - Bogotá, Colombia<br />
+				Dancehall Artist - Bogotá, Colombia<br />
 			</header>
 
 		<!-- Main -->
